update item image

--- a/src/scss/global/overrides.scss
+++ b/src/scss/global/overrides.scss
@@ -60,3 +60,6 @@ table .v-application .bg-gredient{
 .v-data-table .form-btn {
     display: none !important;
 }
+.v-btn--disabled{
+    width: 100%;
+}
