--- a/src/scss/global/globals.css
+++ b/src/scss/global/globals.css
@@ -3,5 +3,4 @@
 @import url("./font.scss");
 @import url("./sidebar.css");
 @import url("./utilities.css");
-@import url("./ltr.css");
-/*# sourceMappingURL=globals.css.map */
+@import url("./ltr.css");/*# sourceMappingURL=globals.css.map */
