--- a/src/scss/global/ltr.css
+++ b/src/scss/global/ltr.css
@@ -3,13 +3,10 @@
   margin-left: 0;
   margin-right: 10px;
 }
-
 .v-application--is-ltr .v-list-item::before {
   border-radius: 0 10px 10px 0;
 }
-
 .v-application--is-ltr .mr-2 {
   margin-right: 0 !important;
   margin-left: 4px !important;
-}
-/*# sourceMappingURL=ltr.css.map */
+}/*# sourceMappingURL=ltr.css.map */
