--- a/src/scss/global/overrides.css
+++ b/src/scss/global/overrides.css
@@ -1,6 +1,5 @@
 .v-application, .bgdarker {
-  -webkit-transition: background .3s ease-in-out;
-  transition: background .3s ease-in-out;
+  transition: background 0.3s ease-in-out;
 }
 
 .theme--dark.v-application {
@@ -13,7 +12,6 @@ tbody tr.v-data-table__mobile-table-row td:first-child {
 }
 
 .v-navigation-drawer, .v-app-bar {
-  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 
@@ -51,7 +49,7 @@ table .v-application .bg-gredient {
 }
 
 .v-list-item__title {
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 .v-tabs > .v-tabs-bar {
@@ -70,4 +68,7 @@ table .v-application .bg-gredient {
 .v-data-table .form-btn {
   display: none !important;
 }
-/*# sourceMappingURL=overrides.css.map */
+
+.v-btn--disabled {
+  width: 100%;
+}/*# sourceMappingURL=overrides.css.map */
